--- a/SciTE.properties
+++ b/SciTE.properties
@@ -1,2 +1,8 @@
 command.go.$(file.patterns.html)=copyToLocal.bat
 command.go.subsystem.*.html=1
+command.go.$(file.patterns.js)=copyToLocal.bat
+command.go.subsystem.*.js=1
+command.go.$(file.patterns.xml)=copyToLocal.bat
+command.go.subsystem.*.xml=1
+command.go.$(file.patterns.css)=copyToLocal.bat
+command.go.subsystem.*.css=1
