--- a/SciTE.properties
+++ b/SciTE.properties
@@ -6,3 +6,7 @@ command.go.$(file.patterns.xml)=copyToLocal.bat
 command.go.subsystem.*.xml=1
 command.go.$(file.patterns.css)=copyToLocal.bat
 command.go.subsystem.*.css=1
+command.compile.$(file.patterns.css)=copyToLocal.bat
+command.compile.subsystem.*.css=1
+command.build.$(file.patterns.css)=copyToLocal.bat
+command.build.subsystem.*.css=1
